canary/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-canary
spec:
  replicas: 5
  selector:
    matchLabels:
      app: react
      version: canary
  template:
    metadata:
      labels:
        app: react
        version: canary
    spec:
      containers:
      - name: react
        image: hnnrobipozar/react-app:1.1.0
