canary/stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 15
  selector:
    matchLabels:
      app: react
      version: stable
  template:
    metadata:
      labels:
        app: react
        version: stable
    spec:
      containers:
      - name: react
        image: hnnrobipozar/react-app:1.0.0
