canary/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: react
spec:
  host: react
  subsets:
  - name: stable
    labels:
      version: stable
  - name: canary
    labels:
      version: canary
